[gd_scene load_steps=9 format=2]

[ext_resource path="res://godot shapes/circle.png" type="Texture" id=1]
[ext_resource path="res://faces/evil.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy-2.gd" type="Script" id=3]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://SFX/explosion.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 51.0098

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=3]
radius = 52.0865

[node name="Enemy-2" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0.0392157, 0.635294, 1 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="HitBox" type="Area2D" parent="." groups=[
"enemy",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="HP" type="Label" parent="."]
margin_left = -9.0
margin_top = -103.0
margin_right = 31.0
margin_bottom = -52.0
custom_fonts/font = SubResource( 2 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 3.0

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
